week1/day5/firewall/some_rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Jun  5 16:27:39 2026
*raw
:PREROUTING ACCEPT [163262:15017207]
:OUTPUT ACCEPT [156952:14152639]
-A PREROUTING -d 172.20.0.2/32 ! -i br-87733f53d0d8 -j DROP
-A PREROUTING -d 172.21.0.2/32 ! -i br-41bfed32ba13 -j DROP
-A PREROUTING -d 172.20.0.3/32 ! -i br-87733f53d0d8 -j DROP
COMMIT
# Completed on Fri Jun  5 16:27:39 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Jun  5 16:27:39 2026
*filter
:INPUT DROP [5530:1137068]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [67:4726]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 987 -j ACCEPT
-A INPUT -s 192.168.88.4/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A DOCKER ! -i br-ed47dd464f02 -o br-ed47dd464f02 -j DROP
-A DOCKER ! -i br-009c53269e82 -o br-009c53269e82 -j DROP
-A DOCKER ! -i br-41bfed32ba13 -o br-41bfed32ba13 -j DROP
-A DOCKER ! -i br-87733f53d0d8 -o br-87733f53d0d8 -j DROP
-A DOCKER ! -i br-9f23cbd06615 -o br-9f23cbd06615 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-ed47dd464f02 -j DOCKER
-A DOCKER-BRIDGE -o br-009c53269e82 -j DOCKER
-A DOCKER-BRIDGE -o br-41bfed32ba13 -j DOCKER
-A DOCKER-BRIDGE -o br-87733f53d0d8 -j DOCKER
-A DOCKER-BRIDGE -o br-9f23cbd06615 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-ed47dd464f02 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-009c53269e82 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-41bfed32ba13 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-87733f53d0d8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-9f23cbd06615 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-ed47dd464f02 -j ACCEPT
-A DOCKER-FORWARD -i br-009c53269e82 -j ACCEPT
-A DOCKER-FORWARD -i br-41bfed32ba13 -j ACCEPT
-A DOCKER-FORWARD -i br-87733f53d0d8 -j ACCEPT
-A DOCKER-FORWARD -i br-9f23cbd06615 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-USER -s 192.168.88.4/32 -j ACCEPT
-A DOCKER-USER -s 172.16.6.2/32 -j ACCEPT
-A DOCKER-USER -s 172.16.6.0/24 -j DROP
-A DOCKER-USER -s 192.168.88.0/24 -j DROP
COMMIT
# Completed on Fri Jun  5 16:27:39 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri Jun  5 16:27:39 2026
*nat
:PREROUTING ACCEPT [5545:1139868]
:INPUT ACCEPT [2:120]
:OUTPUT ACCEPT [97:6942]
:POSTROUTING ACCEPT [97:6942]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-41bfed32ba13 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-87733f53d0d8 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-ed47dd464f02 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-9f23cbd06615 -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-009c53269e82 -j MASQUERADE
COMMIT
# Completed on Fri Jun  5 16:27:39 2026
